[package]
name = "gst-jpegtrunc"
authors = [ "arcnmx" ]
edition = "2018"
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/arcnmx/gst-jpegtrunc"
description = "JPEG buffer truncation"

[dependencies]
glib = "^0.10.3"
gstreamer = "^0.16.7"
gstreamer-base = "^0.16.5"
once_cell = "^1.8.0"
memchr = "^2.4.0"

[lib]
name = "gstjpegtrunc"
crate-type = [ "cdylib" ]
